Some tests and examples require clang >= v8.0

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -234,8 +234,12 @@ if (ENABLE_ARRAY)
 	build_test(array_iterator array_iterator/array_iterator.cpp)
 	add_test_generic(NAME array_iterator TRACERS none pmemcheck)
 
-	build_test(array_modifiers array_modifiers/array_modifiers.cpp)
-	add_test_generic(NAME array_modifiers TRACERS none pmemcheck memcheck)
+	if(NOT CLANG_DESTRUCTOR_REFERENCE_BUG_PRESENT)
+		build_test(array_modifiers array_modifiers/array_modifiers.cpp)
+		add_test_generic(NAME array_modifiers TRACERS none pmemcheck memcheck)
+	else()
+		message(WARNING "skipping array_modifiers test - it requires clang >= ${CLANG_REQUIRED_BY_DESTRUCTOR_REFERENCE_BUG}")
+	endif()
 
 	if(PMREORDER_SUPPORTED)
 		build_test(array_slice_pmreorder array_slice_pmreorder/array_slice_pmreorder.cpp)
