Add TESTS_LONG cmake option
And use it for long running tests (concurrent hash map drd tests).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -368,9 +368,15 @@ if(PMEMVLT_PRESENT AND ENABLE_CONCURRENT_HASHMAP)
 	add_test_generic(NAME concurrent_hash_map_rehash CASE 0 TRACERS none memcheck pmemcheck)
 
 	if(TESTS_CONCURRENT_HASH_MAP_DRD_HELGRIND)
-		add_test_generic(NAME concurrent_hash_map_insert_lookup CASE 0 TRACERS drd helgrind)
+		add_test_generic(NAME concurrent_hash_map_insert_lookup CASE 0 TRACERS helgrind)
 
-		add_test_generic(NAME concurrent_hash_map_insert_erase CASE 0 TRACERS drd helgrind)
+		add_test_generic(NAME concurrent_hash_map_insert_erase CASE 0 TRACERS helgrind)
+
+		if (TESTS_LONG)
+			add_test_generic(NAME concurrent_hash_map_insert_lookup CASE 0 TRACERS drd)
+
+			add_test_generic(NAME concurrent_hash_map_insert_erase CASE 0 TRACERS drd)
+		endif()
 
 		add_test_generic(NAME concurrent_hash_map_rehash CASE 0 TRACERS helgrind)
 	endif()
