--- a/travis.yml
+++ b/travis.yml
@@ -8,6 +8,9 @@ services:
   - docker
 
 env:
+  global:
+    - GITHUB_REPO=pmem/libpmemobj-cpp
+    - DOCKERHUB_REPO=pmem/libpmemobj-cpp
   matrix:
     - TYPE=debug OS=fedora OS_VER=31 PUSH_IMAGE=1 AUTO_DOC_UPDATE=1
     - TYPE=debug OS=ubuntu OS_VER=19.10 PUSH_IMAGE=1
@@ -23,16 +26,12 @@ env:
 before_install:
   - echo $TRAVIS_COMMIT_RANGE
   - export HOST_WORKDIR=`pwd`
-  - export GITHUB_REPO=pmem/libpmemobj-cpp
-  - export DOCKERHUB_REPO=pmem/libpmemobj-cpp
   - cd utils/docker
   - ./pull-or-rebuild-image.sh
-  - if [[ -f push_image_to_repo_flag ]]; then PUSH_THE_IMAGE=1; fi
-  - if [[ -f skip_build_package_check ]]; then export SKIP_CHECK=1; fi
-  - rm -f push_image_to_repo_flag skip_build_package_check
 
 script:
   - ./build.sh
 
 after_success:
-  - if [[ $PUSH_THE_IMAGE -eq 1 ]]; then images/push-image.sh $OS-$OS_VER; fi
+  - source ./set-vars.sh
+  - if [[ -f $CI_FILE_PUSH_IMAGE_TO_REPO ]]; then ./images/push-image.sh $OS-$OS_VER; fi
