--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -7,19 +7,20 @@
 # when we decide to switch from Travis to GitHub Actions. The 'XXX_DISABLE_' suffix should be removed then.
 #
 
-name: CPP
-on: [push, pull_request]
+name: WIN
+on: [push]
 
 env:
     GITHUB_REPO:    pmem/libpmemobj-cpp
     DOCKERHUB_REPO: pmem/libpmemobj-cpp
-    HOST_WORKDIR:   /home/runner/work/libpmemobj-cpp/libpmemobj-cpp
-    WORKDIR:        utils/docker
 
 jobs:
-  build:
-    name: Build
+  linux:
+    name: Linux
     runs-on: ubuntu-latest
+    env:
+      HOST_WORKDIR:   /home/runner/work/libpmemobj-cpp/libpmemobj-cpp
+      WORKDIR:        utils/docker
     strategy:
       matrix:
         CONFIG: ["N=1 OS=ubuntu OS_VER=19.10 TYPE=debug PUSH_IMAGE=1",
@@ -47,3 +48,70 @@ jobs:
 
        - name: Push the image
          run: cd $WORKDIR && source ./set-vars.sh && ${{ matrix.CONFIG }} /bin/bash -c "if [[ -f XXX_DISABLE_${CI_FILE_PUSH_IMAGE_TO_REPO} ]]; then images/push-image.sh $OS-$OS_VER; fi"
+
+  windows:
+    name: Windows
+    runs-on: windows-latest
+    env:
+      VCPKG_DEFAULT_TRIPLET: x64-windows
+      GENERATOR: "Visual Studio 16 2019"
+      PMDK_INCLUDE_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
+      PMDK_LIBRARY: "C:/vcpkg/packages/pmdk_x64-windows/bin;C:/vcpkg/packages/pmdk_x64-windows/lib"
+      platform: x64
+#      GENERATOR: "Visual Studio 14 2015 Win64"
+#      version: 1.4.{build}
+#      os: Visual Studio 2017
+    strategy:
+      matrix:
+        CONFIG: [Debug] # , Release]
+    steps:
+       - name: Cache packages
+         uses: actions/cache@v1
+         id: cache-pmdk
+         with:
+            path: C:/vcpkg/packages
+            key:  pmdk-1.7
+
+       - name: Clone the git repo
+         uses: actions/checkout@v1
+
+       - name: Install PMDK
+         if: steps.cache-pmdk.outputs.cache-hit != 'true'
+         run: |
+            vcpkg install pmdk:x64-windows
+            vcpkg install sfml:x64-windows
+
+       - run: vcpkg integrate install
+
+       - name: Setup MSBuild.exe
+         uses: warrenbuckley/Setup-MSBuild@v1
+
+       - name: Configure
+         env:
+           LIBPMEM_INC_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
+           LIBPMEM_LIB_DIR: "C:/vcpkg/packages/pmdk_x64-windows/lib"
+           LIBPMEMOBJ_INC_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
+           LIBPMEMOBJ_LIB_DIR: "C:/vcpkg/packages/pmdk_x64-windows/lib"
+         run: cmake . -Bbuild -G "${env:GENERATOR}" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=c:/install/libpmemobj-cpp -DTESTS_USE_FORCED_PMEM=ON -DLIBPMEMOBJ_VERSION="1.7"
+
+       - name: Build
+         env:
+           CONFIGURATION: ${{ matrix.CONFIG }}
+         run: msbuild build/ALL_BUILD.vcxproj /property:Configuration=${env:CONFIGURATION} /verbosity:minimal
+
+       - name: Test
+         run: |
+           dir
+           cd build
+           ctest -C ${env:CONFIGURATION} --output-on-failure --timeout 540
+
+# XXX: enable this after pmdk update
+#- msbuild INSTALL.vcxproj /verbosity:minimal
+#- cd ..
+# build standalone example
+#- cd examples/map_cli
+#- cmake . -G "${{ GENERATOR }}"
+#        -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
+#        -DCMAKE_PREFIX_PATH=c:/install/libpmemobj-cpp
+#        -DTESTS_USE_FORCED_PMEM=ON
+#- msbuild ALL_BUILD.vcxproj /verbosity:minimal
