--- a/travis.yml
+++ b/travis.yml
@@ -14,7 +14,7 @@ env:
   matrix:
     - TYPE=debug OS=fedora OS_VER=31 PUSH_IMAGE=1 AUTO_DOC_UPDATE=1
     - TYPE=debug OS=ubuntu OS_VER=19.10 PUSH_IMAGE=1
-    - TYPE=debug OS=ubuntu OS_VER=19.10 COVERAGE=1
+    - TYPE=coverage OS=ubuntu OS_VER=19.10
     - TYPE=release OS=fedora OS_VER=31
     - TYPE=release OS=ubuntu OS_VER=19.10
     - TYPE=valgrind OS=ubuntu OS_VER=19.10
