--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -21,9 +21,9 @@ jobs:
     env:
       VCPKG_DEFAULT_TRIPLET: x64-windows
       GENERATOR: "Visual Studio 16 2019"
-      PMDK_INCLUDE_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
-      PMDK_LIBRARY: "C:/vcpkg/packages/pmdk_x64-windows/bin;C:/vcpkg/packages/pmdk_x64-windows/lib"
       platform: x64
+      PMDK_DIR: "C:/vcpkg/packages/pmdk_x64-windows"
+      PMDK_VERSION: "1.7"
 #      GENERATOR: "Visual Studio 14 2015 Win64"
 #      version: 1.4.{build}
 #      os: Visual Studio 2017
@@ -53,12 +53,7 @@ jobs:
          uses: warrenbuckley/Setup-MSBuild@v1
 
        - name: Configure
-         env:
-           LIBPMEM_INC_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
-           LIBPMEM_LIB_DIR: "C:/vcpkg/packages/pmdk_x64-windows/lib"
-           LIBPMEMOBJ_INC_DIR: "C:/vcpkg/packages/pmdk_x64-windows/include"
-           LIBPMEMOBJ_LIB_DIR: "C:/vcpkg/packages/pmdk_x64-windows/lib"
-         run: cmake . -Bbuild -G "${env:GENERATOR}" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=c:/install/libpmemobj-cpp -DTESTS_USE_FORCED_PMEM=ON -DLIBPMEMOBJ_VERSION="1.7"
+         run: cmake . -Bbuild -G "${env:GENERATOR}" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=c:/install/libpmemobj-cpp -DTESTS_USE_FORCED_PMEM=ON -DLIBPMEMOBJ_VERSION="${env:PMDK_VERSION}" -DCMAKE_PREFIX_PATH="${env:PMDK_DIR}"
 
        - name: Build
          env:
