transaction: add register_callback function
It's now possible to register callback for transaction. This implementation
uses pmemobj C tx callback internally but the user is able to
register multiple callbacks for each transaction stage.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -164,7 +164,7 @@ build_test(shared_mutex_posix shared_mutex_posix/shared_mutex_posix.cpp)
 add_test_generic(NAME shared_mutex_posix TRACERS drd helgrind pmemcheck)
 
 build_test(transaction transaction/transaction.cpp)
-add_test_generic(NAME transaction TRACERS none pmemcheck)
+add_test_generic(NAME transaction TRACERS none pmemcheck memcheck)
 
 if(WIN32)
 	build_test(pool_win pool_win/pool_win.cpp)
