--- a/tests/external/CMakeLists.txt
+++ b/tests/external/CMakeLists.txt
@@ -1178,3 +1178,6 @@ if (TEST_CONCURRENT_MAP)
 	# build_test(map_libcxx_non_member_swap libcxx/map/map.special/non_member_swap.pass.cpp)
 	# add_test_generic(NAME map_libcxx_non_member_swap TRACERS none pmemcheck memcheck)
 endif()
+
+build_test_ext(NAME radix_libcxx_erase_key SRC_FILES libcxx/map/map.modifiers/erase_key.pass.cpp BUILD_OPTIONS -DRADIX)
+add_test_generic(NAME radix_libcxx_erase_key TRACERS none pmemcheck memcheck)
