examples: add example for radix tree
It reads a sequence of keys from stdin and prints radix in a DOT
format.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -67,6 +67,9 @@ add_check_whitespace(examples-simplekv_rebuild ${CMAKE_CURRENT_SOURCE_DIR}/simpl
 add_cppstyle(examples-slab ${CMAKE_CURRENT_SOURCE_DIR}/slab/*.*pp)
 add_check_whitespace(examples-slab ${CMAKE_CURRENT_SOURCE_DIR}/slab/*.*pp)
 
+add_cppstyle(examples-radix_tree ${CMAKE_CURRENT_SOURCE_DIR}/radix_tree/*.*pp)
+add_check_whitespace(examples-radix_tree ${CMAKE_CURRENT_SOURCE_DIR}/radix_tree/*.*pp)
+
 function(add_example name)
 	set(srcs ${ARGN})
 	prepend(srcs ${CMAKE_CURRENT_SOURCE_DIR} ${srcs})
@@ -151,6 +154,10 @@ add_example(array array/array.cpp)
 
 if (TEST_VECTOR)
 	add_example(slab slab/slab.cpp)
+endif()
+
+if (TEST_RADIX_TREE)
+	add_example(radix_tree_dot radix_tree/radix_tree_dot.cpp)
 endif()
 
 add_library(doc_snippets_v OBJECT doc_snippets/v.cpp)
