examples: add radix_tree_basic and radix_tree_custom_key examples
Also, add doc snippet (BytesView example) to radix_tree.

--- a/examples/radix_tree/CMakeLists.txt
+++ b/examples/radix_tree/CMakeLists.txt
@@ -19,3 +19,11 @@ link_directories(${LIBPMEMOBJ++_LIBRARY_DIRS})
 add_executable(radix_tree_dot radix_tree_dot.cpp)
 target_include_directories(radix_tree_dot PUBLIC ${LIBPMEMOBJ++_INCLUDE_DIRS} . ..)
 target_link_libraries(radix_tree_dot ${LIBPMEMOBJ++_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
+add_executable(radix_tree_basic radix_tree_basic.cpp)
+target_include_directories(radix_tree_basic PUBLIC ${LIBPMEMOBJ++_INCLUDE_DIRS} . ..)
+target_link_libraries(radix_tree_basic ${LIBPMEMOBJ++_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
+add_executable(radix_tree_custom_key radix_tree_custom_key.cpp)
+target_include_directories(radix_tree_custom_key PUBLIC ${LIBPMEMOBJ++_INCLUDE_DIRS} . ..)
+target_link_libraries(radix_tree_custom_key ${LIBPMEMOBJ++_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
