--- a/doc/libpmemobj++.Doxyfile.in
+++ b/doc/libpmemobj++.Doxyfile.in
@@ -128,6 +128,7 @@ EXCLUDE =
 # command).
 
 EXAMPLE_PATH = @CMAKE_SOURCE_DIR@/examples/doc_snippets
+EXAMPLE_PATH += @CMAKE_SOURCE_DIR@/examples
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
